# c-analyzer

./: main.py  pyproject.toml  run.sh  setup.cfg  slr_table.py  test.c  test.out
lexical/: dfa.py  grammar.py  lexical_analyzer.py
lexical/automata/: Identifier.py  arithmatic.py  assignment.py  comma.py  comparision.py  identifier.py  keyword.py  literal_string.py  operator.py  semicolon.py  signed_int.py  symbols_for_defining.py  symbols_for_indicating.py  variable.py  whitespace.py
syntactic/: models.py  slr_table.py  stack.py  symbol_manager.py  syntax_analyzer.py
tools/: line_buffer.py
