[tool.poetry]
name = "lexical-analyzer"
version = "0.1.0"
description = ""
authors = ["Sangyun Ock <demibun@a41ventures.com>"]

[tool.poetry.dependencies]
python = "^3.9"
prettytable = "^3.3.0"
black = "^22.3.0"
isort = "^5.10.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
